--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p>Applies to orders of 5.000.000₫ or more. <a href="https://www.nike.com/vn/help/a/shipping-delivery-gs">View details</a></p>
             </div>
         </div>
-        <a class="main-image" href="https://www.nike.com/vn/w/pegasus-40th-anniversary-9fkki">
+        <a class="main-image" href="./Shop_Pegasus_Nike/Nike_Shop.html">
             <img src="./img/nike-man.webp" alt="djtmem">
             <div class="introduce__content">
                 <p>Nike Pegasus 40</p>
