them bai cua lam

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li>Women</li>
                     <li>Kids</li>
                     <li>Sale</li>
-                    <li>SNKRS</li>
+                    <li><a href="./SNKR/index.html" style="color: #111;text-decoration: none;">SNKRS</a></li>
             </ul>
             <div class="search__box">
                 <i class="fa-solid fa-magnifying-glass"></i>
