--- a/SNKR/index.html
+++ b/SNKR/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container__header-one"> 
-            <a href="#" class="item__header-one">
+            <a href="../index.html" class="item__header-one">
                 <i class="fa-solid fa-angle-left"></i> Visit Nike.com
             </a>
             <nav class="list-items__header-one">
