them tro con bo

--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
             </div>
         </div>
         </div>
+        <div class="game__show">
+            <i class="fa-solid fa-arrow-right"></i><a href="./snake game/index.html"><span>Try this little game!!!</span></a>
+        </div>
     <div class="footer">
         <div class="footer--info">
             <ul>
