--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./grid.css">
-    <link rel="stylesheet" href="./header.css">
-    <link rel="stylesheet" href="./fisrt-section.css">
-    <link rel="stylesheet" href="./main-content.css">
-    <link rel="stylesheet" href="./responesive.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Nike</title>
 </head>
 <body>
@@ -320,7 +317,8 @@
         </div>
         </div>
         <div class="game__show">
-            <i class="fa-solid fa-arrow-right"></i><a href="./snake game/index.html"><span>Try this little game!!!</span></a>
+            <i class="fa-solid fa-arrow-right"></i>
+            <a href="./snake game/index.html"><span>Try this little game!!!</span></a>
         </div>
     <div class="footer">
         <div class="footer--info">
