--- a/Shop_Pegasus_Nike/Nike_Shop.html
+++ b/Shop_Pegasus_Nike/Nike_Shop.html
@@ -8,13 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../main-content.css">
-    <link rel="stylesheet" href="../responesive.css">
-    <link rel="stylesheet" href="../fisrt-section.css">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./maincontent.css">
-    <link rel="stylesheet" href="./effect_navbar.css">
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../style.css">
     <script defer src="../logic.js"></script>
     <title>Nike_Pegasus</title>
 </head>
